[project]
name = "roboticsutilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "sympy>=1.13.3",
    "typer>=0.15.2",
]

[tool.coverage.run]
branch = true
